syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/elojah/trax/pkg/gogoproto/gogo.proto";
import "github.com/elojah/trax/pkg/pbtypes/string.proto";

message FetchProfileReq {
    bool Me                     = 1;

	bytes UserID                = 2 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
	bytes EntityID              = 3 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
}

message UpdateProfileReq {
    pbtypes.String Firstname    = 1;
    pbtypes.String Lastname     = 2;
    pbtypes.String AvatarURL    = 3;
}
